--- a/hackdavis2024/public/css/form.css
+++ b/hackdavis2024/public/css/form.css
@@ -16,7 +16,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url('../img/bg.png');
+    background: url('../img/aggie_house.png');
     background-size: cover;
     background-position: center;
     font-family: 'roboto', sans-serif;
@@ -25,7 +25,7 @@ body{
 .form{
     width: 400px;
     height: auto;
-    color: #fff;
+    color: #000000;
     font-family: 'roboto', sans-serif;
 }
 
@@ -48,13 +48,13 @@ input,
     border-radius: 5px;
     background: rgba(255, 255, 255, 0.3);
     border: none;
-    color: #fff;
+    color: #000000;
     padding: 15px;
     transition: .5s;
 }
 
 input::placeholder{
-    color: #fff;
+    color: #000000;
 }
 
 input:focus,
