--- a/hackdavis2024/public/css/form.css
+++ b/hackdavis2024/public/css/form.css
@@ -15,15 +15,20 @@ body{
     height: auto;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     background: url('../img/aggie_house.png');
     background-size: cover;
     background-position: center;
     font-family: 'roboto', sans-serif;
 }
 
+.input {
+    margin-bottom: 20px; /* Adjust the spacing between email and password fields */
+}
+
 .form{
     width: 400px;
+    margin-bottom: 50px;
     height: auto;
     color: #000000;
     font-family: 'roboto', sans-serif;
@@ -33,9 +38,9 @@ body{
     opacity: 0;
     text-transform: capitalize;
     text-align: center;
-    font-size: 80px;
+    font-size: 30px;
     font-weight: 300;
-    margin-bottom: 50px;
+    margin-bottom: 10px;
 }
 
 input,
@@ -44,7 +49,7 @@ input,
     width: 80%;
     height: 35px;
     display: block;
-    margin: 20px auto;
+    margin: 10px auto 20px;
     border-radius: 5px;
     background: rgba(255, 255, 255, 0.3);
     border: none;
@@ -71,7 +76,7 @@ input:focus::placeholder{
     width: auto;
     padding: 0 20px;
     cursor: pointer;
-    margin: 50px auto 0;
+    margin: 10px auto 0;
     opacity: 0;
 }
 
